src/test/run-pass/import4.rs

import zed::bar;

module zed {
    fn bar() { debug!{"bar"}; }
}

fn main(args: ~[~str]) { let zed = 42; bar(); }
